profileActivity loading picture need to be fixed